# Homegear-Sonos

./: .project  CMakeLists.txt  Makefile  README.md  config.h  config.status  configure  configure.ac  getVersion.sh  libtool  makeCoverity.sh  makeRelease.sh
debian/: changelog  control  copyright  postinst  postrm  rules
misc/Config Directory/: sonos.conf
misc/Device Description Files/: Sonos.xml
misc/Device Description Files/l10n/en-US/: Sonos.xml
misc/State Directory/scripts/DeviceScripts/Sonos/: EasyTTS.php  IvonaTTS.php  Polly.php  espeakTTS.php
src/: Factory.cpp  Factory.h  GD.cpp  GD.h  Interfaces.cpp  Interfaces.h  Makefile  Makefile.am  Makefile.in  Sonos.cpp  Sonos.h  SonosCentral.cpp  SonosCentral.h  SonosDevice.cpp  SonosPacket.cpp  SonosPacket.h  SonosPeer.cpp  SonosPeer.h
src/.deps/: Factory.Plo  GD.Plo  Sonos.Plo  SonosDevice.Plo  SonosPacket.Plo  SonosPeer.Plo
src/LogicalDevices/: SonosCentral.cpp
src/LogicalDevices/.deps/: SonosCentral.Plo
src/PhysicalInterfaces/: EventServer.cpp  EventServer.h  ISonosInterface.cpp  ISonosInterface.h
src/PhysicalInterfaces/.deps/: EventServer.Plo  ISonosInterface.Plo
